2002-08-06  Tim Legant  <tim@catseye.net>

	* FilterParser.py: Added macro substitution and variable
	interpolation.

	(Macro): New class.

	(FilterParser.__parsemacro, FilterParser.__expandmacros,
	FilterParser.__findvarsub, FilterParser.__interpolatevars): New
	functions.

	(FilterParser.firstmatch): Added '-optional' argument to all rules
	that access files.

2002-07-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (X_TMDA_IN_SUBJECT, ADDED_HEADERS_SERVER): New
	variables.

	Renamed ADDED_HEADERS to ADDED_HEADERS_CLIENT.
	
2002-06-20  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py: New helper functions: getuid, getgid, gethomedir, and
	getgrouplist.

2002-06-18  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (CONFIG_EXEC): New variable.

2002-06-16  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py: Add PENDING_WHITELIST_APPEND &
	PENDING_BLACKLIST_APPEND.
	
2002-06-15  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Cookie.py (make_keyword_cookie): Replace RECIPIENT_DELIMITER
	with `?' in the keyword.

2002-06-12  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (getfileuid): New function that returns the numerical
	UID of a given file.

2002-06-11  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (BOUNCE_ENV_SENDER): Set default to '<>' in all
	cases except where OUTGOINGMAIL = "sendmail" *and*
	MAIL_TRANSFER_AGENT is qmail or postfix.

2002-06-10  Mark Horn  <mark@hornclan.com>

	* Defaults.py: Added ACTION_FAIL* variables and BOUNCE_TEXT_FAIL*
	variables

2002-06-06  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Cookie.py: Refer to the first element of TAGS_* lists for the
	identifying string when creating an address.

	* Defaults.py: New variables: TAGS_CONFIRM, TAGS_DATED,
	TAGS_KEYWORD, TAGS_SENDER.

2002-05-25  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
